gemini_api_update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "tsc -b && vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "start": "npm run build && npx serve -s dist -l 4200"
+},
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "html-react-parser": "^5.2.5",
