--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/server.js"
+    "build": "tsc",
+    "build-start": "npm run build && node dist/server.js"
   },
   "dependencies": {
     "@types/express": "^5.0.2",
@@ -25,6 +26,7 @@
     "openai": "^5.1.0",
     "punycode": "^2.3.1",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "together-ai": "^0.16.0",
     "typescript": "^5.8.3",
     "whatwg-url": "^14.0.0"
