--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -95,8 +95,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*"
-  ],
+    "src/**/*" ],
   "exclude": [
     "node_modules",
     "dist",
