--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "tsc -b && vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "start": "npm run build && npx serve -s dist -l 4200"
-},
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "npm run build && npx serve -s dist -l 4200"
+  },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^24.2.0",
+    "dotenv": "^17.2.1",
     "html-react-parser": "^5.2.5",
     "katex": "^0.16.22",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "serve": "^14.2.4",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
   },
