--- a/backend/package.json
+++ b/backend/package.json
@@ -15,21 +15,30 @@
     "@pinecone-database/pinecone": "^6.1.2",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^5.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "punycode": "^2.3.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "together-ai": "^0.16.0",
     "typescript": "^5.8.3",
     "whatwg-url": "^14.0.0"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
