--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.2.0",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "html-react-parser": "^5.2.5",
     "katex": "^0.16.22",
